--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,343 @@
-.App {
-  text-align: center;
+/* Global CSS */
+@import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lilita+One&display=swap');
+
+* {
+	padding: 0;
+	margin: 0;
+	font-family: "Roboto", sans-serif;
+	background-color: #f5fcff;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+.error {
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 100vh;
+	width: 100vw;
+	text-align: center;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+.error h1 {
+	font-size: 2em;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+/* Navbar */
+.navbar {
+	box-shadow: 2px 2px 5px rgba(0, 0, 0, .2);
 }
 
-.App-link {
-  color: #61dafb;
+.navbar-brand {
+	font-family: "Lilita One";
+	margin-left: 64px;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.nav-item {
+	margin-right: 40px;
+}
+
+.nav-item>a {
+	color: black;
+}
+
+.nav-item>a:hover {
+	color: slategray;
+}
+
+.last-item {
+	margin-right: 64px;
+}
+
+/* Hero Section */
+.hero-content-box {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 50px;
+	margin-left: 128px;
+	margin-top: 148px;
+	margin-right: 128px;
+	grid-template-areas: "a b";
+}
+
+.hero-title-colored {
+	font-size: 48px;
+	font-weight: 500;
+	color: blueviolet;
+	margin-left: -2px;
+}
+
+.hero-title {
+	font-size: 24px;
+	line-height: 18px;
+}
+
+.hero-desc {
+	margin-top: 50px;
+	font-weight: 400;
+	font-size: 18px;
+}
+
+.hero-image {
+	height: 400px;
+	width: 320px;
+	border-radius: 16px;
+}
+
+.hero-image-section {
+	display: flex;
+	justify-content: space-evenly;
+	grid-area: b;
+}
+
+.hero-content {
+	grid-area: a;
+}
+
+.logos>a>img {
+	margin-top: 60px;
+	height: 32px;
+	width: 32px;
+	margin-right: 24px;
+	border-radius: 8px;
+}
+
+.logos>a>img:hover {
+	height: 40px;
+	width: 40px;
+	margin-right: 16px;
+	margin-top: 52px;
+	box-shadow: rgba(0, 0, 0, 0.16) 0px 10px 36px 0px, rgba(0, 0, 0, 0.06) 0px 0px 0px 1px;
+}
+
+
+/* Education */
+
+.education-title {
+	margin-top: 148px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.card {
+	width: 28rem;
+}
+
+.education-content-box {
+	display: grid;
+	grid-template-columns: 1fr 1fr;
+	gap: 240px;
+	margin-left: 128px;
+	margin-top: 64px;
+	margin-right: 128px;
+	margin-bottom: 180px;
+	grid-template-areas: "clg scl";
+}
+
+.education-scl>.card {
+	width: 32rem;
+}
+
+.education-scl {
+	grid-area: scl;
+}
+
+.education-clg {
+	grid-area: clg;
+}
+
+.ed-logo {
+	display: flex;
+	justify-content: center;
+	padding-top: 50px;
+	padding-bottom: 50px;
+}
+
+
+/* Skills */
+.skills-content-box {
+	margin-top: 64px;
+	margin-bottom: 8px;
+	width: 100%;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+
+.skill {
+	border: 1px solid black;
+	border-radius: 15px;
+	box-sizing: border-box;
+	width: 80vw;
+	max-width: 800px;
+	padding: 20px;
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	position: relative;
+}
+
+.skill:hover {
+	box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
+	transition: .1s ease-in-out;
+}
+
+
+.skill-img {
+	height: 40px;
+	width: 40px;
+	position: absolute;
+	top: 10px;
+	left: 10px;
+}
+
+.skill-text {
+	margin: 0;
+	text-align: center;
+	font-weight: 500;
+}
+
+/* Project */
+.container {
+	margin-left: 128px;
+	margin-right: 128px;
+	margin-top: 64px;
+	margin-bottom: 120px;
+}
+
+.project {
+	border-radius: 16px;
+}
+
+.project-num {
+	font-size: 24px;
+	font-weight: 500;
+}
+
+.project-title {
+	font-size: 20px;
+}
+
+.git-btn {
+	display: flex;
+	justify-content: center;
+	text-align: center;
+	background-color: black;
+	color: white;
+	padding: 8px 16px;
+	border-radius: 12px;
+	transition: background-color .1s ease-in-out;
+	border: none;
+}
+
+.git-btn-logo {
+	margin-right: 12px;
+	height: 24px;
+	width: 24px;
+	background-color: black;
+}
+
+.git-btn:hover {
+	background-color: white;
+	color: black;
+	border: 1px solid black;
+}
+
+.git-btn:hover .git-btn-logo {
+	content: url('./Assets/github-dark.png');
+	background-color: white;
+	height: 24px;
+	width: 24px;
+}
+
+.project>a {
+	text-decoration: none;
+}
+
+.project>p {
+	text-align: justify;
+}
+
+/* Contact */
+input, textarea {
+	outline: none;
+}
+
+.contact > .row {
+	margin-top: 64px;
+}
+
+.contact-ip {
+	width: 100%;
+	height: 40px;
+	border-radius: 8px;
+	padding: 5px;
+	box-sizing: border-box;
+	border: 1px solid blueviolet;
+	background-color: transparent;
+}
+/* Footer */
+.footer {
+	margin-bottom: 20px;
+}
+
+@media (max-width: 768px) {
+
+	.nav {
+		width: 100vw;
+	}
+
+	.hero-content-box {
+		grid-template-columns: 1fr;
+		margin-top: 28px;
+		margin-left: 0px;
+		margin-right: 0px;
+		padding-left: 24px;
+		padding-right: 24px;
+		grid-template-areas: "b" "a";
+	}
+
+	.hero-image-section {
+		margin-top: 40px;
+	}
+
+	.hero-image {
+		height: 248px;
+		width: 200px;
+	}
+
+	.education-content-box {
+		grid-template-columns: 1fr;
+		margin-top: 28px;
+		margin-left: 0px;
+		margin-right: 0px;
+		padding-left: 12px;
+		padding-right: 12px;
+		grid-template-areas: "clg" "scl";
+		gap: 40px;
+	}
+
+	.card {
+		width: 90%;
+		max-width: 28rem;
+		margin: 0 auto;
+	}
+
+	.education-scl>.card {
+		width: 90%;
+	}
+
+	.education-title {
+		text-align: center;
+	}
+
+	.navbar-brand {
+		margin-left: 2vw;
+	}
+
+	.hero-desc {
+		height: 140px;
+		text-align: justify;
+	}
+
 }
